updated github button
added my profile to the button

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   <h4 class="card-title">This is me</h4>
                   <p class="card-text text-center">A regular guy that likes to program. My other interest include gaming, graphic design, business, basketball, volleyball and fishing.</p>
                   <p class="card-text text-center">Just trying to make my visions come to life.</p>
-                  <a href="#" class="btn btn-primary">Check my Github</a>
+                  <a href="https://github.com/EricVangDevelopment" class="btn btn-primary">Check my Github</a>
                 </div>
               </div>
           </div>
